--- a/wercker.yml
+++ b/wercker.yml
@@ -2,19 +2,19 @@ box: python:2.7-slim
 
 build:
   steps:
-    # A step that sets up the python virtual environment
     - virtualenv:
         name: setup virtual environment
         install_wheel: true # Enable wheel to speed up builds (experimental)
 
-    # A step that executes `pip install` command.
     - pip-install:
         clean_wheel_dir: true
 
-    # A custom script step, name value is used in the UI
-    # and the code value contains the command that get executed
     - script:
         name: echo python information
         code: |
           echo "python version $(python --version) running"
           echo "pip version $(pip --version) running"
+
+    - script:
+        name: pypi deploy
+        code: ./deploy.sh
