--- a/.github/workflows/execute_tests.yml
+++ b/.github/workflows/execute_tests.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Build
         run: |
+          pip install wheel
           python setup.py sdist bdist_wheel
 
       - name: Test
